--- a/EmployeeSkillManagement/wwwroot/css/site.css
+++ b/EmployeeSkillManagement/wwwroot/css/site.css
@@ -23,16 +23,13 @@ html {
 }
 
 body {
-  /* margin-bottom: 60px; */
   background: var(--bs-gray-100);
 }
 body *{
   font-family: 'Poppins', sans-serif;
 }
 
-main{
-  /* height: 100%; */
-}
+
 main>div{
   background-color: white;
  }
@@ -47,10 +44,7 @@ footer{
 @media (min-width: 576px) {
   .side-navbar-header {
       min-height: calc(100vh - 57px);
-      /* position: fixed;
-      left: 0;
-      top: 0;
-      bottom: 0; */
+      width: 20rem;
   }
   .side-navbar-header .navbar{
       height: 100%;
@@ -58,7 +52,6 @@ footer{
   }
 
   .main-container {
-      /* padding-left: 16%; */
       padding-top: 1.5rem;
       padding-bottom: 1rem;
   }
