--- a/EmployeeSkillManagement/Views/Skill/Create.cshtml
+++ b/EmployeeSkillManagement/Views/Skill/Create.cshtml
@@ -1,5 +1,5 @@
 @model Skill
-<div class="shadow-sm rounded mt-3 p-4">
+<div class="shadow-sm rounded mt-3 p-4 bg-white">
     <form method="post" class="row align-items-end">
         <div class="form-group col-sm-5 ">
             <label asp-for="SkillName"></label>
