--- a/EmployeeSkillManagement/Views/Employee/Create.cshtml
+++ b/EmployeeSkillManagement/Views/Employee/Create.cshtml
@@ -4,7 +4,7 @@
     <h4 class="p-2">Create New Employee</h4>
 @* </div> *@
 
-<div class="p-4 shadow-sm rounded mt-2">
+<div class="p-4 shadow-sm rounded mt-2 bg-white">
 
 <form class="row" method="post" asp-controller="Employee" asp-action="Create">
 
