--- a/EmployeeSkillManagement/Views/Employee/_EmployeeCard.cshtml
+++ b/EmployeeSkillManagement/Views/Employee/_EmployeeCard.cshtml
@@ -1,28 +1,40 @@
-@model Employee
+@model List<Employee>
+
+@foreach(var employee in Model){
+
 <div class="d-sm-flex p-3 mb-2 border rounded bg-white ">
     <div class="col-sm-4 mb-4 mb-sm-0">
-        <h6 class="text-primary fw-bold m-0">@Model.FirstName @Model.LastName</h6>
-        <p class="text-muted">@Model.DesignationName</p>
-        <p class="mb-1"><span class="fw-normal fst-italic">Date of Joining:</span> <span class="fw-bold">@Model.DateOfJoining</span></p>
-        <p class="mb-1"><span class="fw-normal fst-italic">Email Address:</span> <span class="fw-bold">@Model.Email</span></p>
+        <h6 class="text-primary fw-bold m-0">@employee.FirstName @employee.LastName</h6>
+        <p class="text-muted">
+            @employee.DesignationName
+        </p>
+        <p class="mb-1">
+            <span class="fw-normal fst-italic">Date of Joining:</span> 
+            <span class="fw-bold">@employee.DateOfJoining</span>
+        </p>
+        <p class="mb-1">
+            <span class="fw-normal fst-italic">Email Address:</span> 
+            <span class="fw-bold">@employee.Email</span>
+        </p>
     </div>        
     <div class="col-sm-4">
         <h6>Skills and Levels:</h6>
         <ul>
-            @foreach (var skillLevel in Model.EmployeeSkillsAndLevels)
+            @foreach (var skillLevel in employee.EmployeeSkillsAndLevels)
             {
                 <li>@skillLevel.SkillName: @skillLevel.SkillLevel</li>
             }
         </ul>
     </div>
-    <div class="col-sm-3 d-flex flex-column justify-content-evenly">
-        <div>
+    <div class="col-sm-3 d-flex flex-sm-column justify-content-evenly">
+        <div class="col-5 col-sm-12">
             <button class="btn btn-secondary w-100">Edit</button>
         </div>
-        <div>
-            <button class="btn btn-danger w-100 delete-employee" data-emp-id="@Model.Id">
+        <div class="col-5 col-sm-12">
+            <button class="btn btn-danger w-100 delete-employee" data-emp-id="@employee.Id">
                 Delete
             </button>
         </div>
     </div>
 </div>
+}
