--- a/EmployeeSkillManagement/wwwroot/css/site.css
+++ b/EmployeeSkillManagement/wwwroot/css/site.css
@@ -30,9 +30,7 @@ body *{
 }
 
 
-main>div{
-  background-color: white;
- }
+
 footer{
   background-color: white;
 } 
@@ -41,7 +39,7 @@ footer{
 @media (min-width: 576px) {
   .side-navbar-header {
       min-height: calc(100vh - 57px);
-      width: 20rem;
+      width: 25%;
   }
   .side-navbar-header .navbar{
       height: 100%;
