Generate report feature added

--- a/EmployeeSkillManagement/Views/Employee/Create.cshtml
+++ b/EmployeeSkillManagement/Views/Employee/Create.cshtml
@@ -70,7 +70,7 @@
             </div>
 
             <div class="col-sm-3">
-                <button id="addSkill" class="btn btn-primary w-100">Add</button>
+                <button id="addSkill" class="btn btn-info  bg-gradient  w-100">Add</button>
             </div>
         </div>
         <div id="skillsContainer" class="d-flex gap-4 flex-wrap col-sm-11 mt-4">
@@ -90,7 +90,7 @@
     </div>
 
     <div class="from-group col-sm-5 mt-3">
-        <button type="submit" class="btn btn-primary col-sm-6">Submit</button>
+        <button type="submit" class="btn btn-primary bg-gradient col-sm-6">Submit</button>
     </div>
 
     <div asp-validation-summary="All" class="text-danger"></div>
