--- a/EmployeeSkillManagement/Views/Employee/_EmployeeCard.cshtml
+++ b/EmployeeSkillManagement/Views/Employee/_EmployeeCard.cshtml
@@ -5,33 +5,37 @@
 <div class="d-sm-flex p-3 mb-2 border rounded bg-white ">
     <div class="col-sm-4 mb-4 mb-sm-0">
         <h6 class="text-primary fw-bold m-0">@employee.FirstName @employee.LastName</h6>
-        <p class="text-muted">
-            @employee.DesignationName
-        </p>
+        <p class="text-muted">@employee.DesignationName</p>
         <p class="mb-1">
-            <span class="fw-normal fst-italic">Date of Joining:</span> 
+            <span class="fw-normal ">Date of Joining:</span> 
             <span class="fw-bold">@employee.DateOfJoining</span>
         </p>
         <p class="mb-1">
-            <span class="fw-normal fst-italic">Email Address:</span> 
+            <span class="fw-normal ">Email Address:</span> 
             <span class="fw-bold">@employee.Email</span>
         </p>
     </div>        
-    <div class="col-sm-4">
-        <h6>Skills and Levels:</h6>
-        <ul>
+    <div class="col-sm-4 text-center border-start border-end border-info rounded mb-4 mt-4 m-sm-0 pt-2 pb-2">
+        <div class="d-flex">
+            <div class="col-6 col-sm-5"><h6>Skills</h6></div>
+            <div class="col-6 col-sm-5"><h6>Proficiency</h6></div>
+        </div>
+        <div class="">
             @foreach (var skillLevel in employee.EmployeeSkillsAndLevels)
-            {
-                <li>@skillLevel.SkillName: @skillLevel.SkillLevel</li>
+            {   <div class="d-flex">
+                    <div class="col-6 col-sm-5">@skillLevel.SkillName</div>
+                    <div class="col-6 col-sm-5">@skillLevel.SkillLevel</div>
+
+                </div>
             }
-        </ul>
+        </div>
     </div>
-    <div class="col-sm-3 d-flex flex-sm-column justify-content-evenly">
+    <div class="col-sm-3 d-flex flex-sm-column justify-content-evenly ms-sm-5">
         <div class="col-5 col-sm-12">
-            <button class="btn btn-secondary w-100">Edit</button>
+            <button class="btn btn-secondary bg-gradient w-100">Edit</button>
         </div>
         <div class="col-5 col-sm-12">
-            <button class="btn btn-danger w-100 delete-employee" data-emp-id="@employee.Id">
+            <button class="btn btn-danger bg-gradient w-100 delete-employee" data-emp-id="@employee.Id">
                 Delete
             </button>
         </div>
