--- a/EmployeeSkillManagement/Views/Skill/Create.cshtml
+++ b/EmployeeSkillManagement/Views/Skill/Create.cshtml
@@ -6,7 +6,7 @@
             <input asp-for="SkillName" class="form-control" placeholder="Enter Skill Name ">
         </div>
         <div class="col-sm-3 ">
-            <button type="submit" class="btn btn-primary w-100">Save</button>
+            <button type="submit" class="btn btn-primary  bg-gradient w-100">Save</button>
         </div>
             <span asp-validation-for="SkillName" class="text-danger"></span>
 
