--- a/EmployeeSkillManagement/Views/Employee/Index.cshtml
+++ b/EmployeeSkillManagement/Views/Employee/Index.cshtml
@@ -1,4 +1,11 @@
 @model EmployeeSkillManagement.Models.ViewModels.EmployeesListViewModel
+@{
+    var message = TempData["ErrorMessage"] as string;
+}
+
+<div>
+    <p class="text-danger">@message</p>
+</div>
 
 <div class="d-sm-flex align-items-end">
     <h4 class="p-2 col-12 col-sm-6 text-center text-lg-start">Manage Employee</h4>
