--- a/EmployeeSkillManagement/Views/Skill/Create.cshtml
+++ b/EmployeeSkillManagement/Views/Skill/Create.cshtml
@@ -1,4 +1,13 @@
 @model Skill
+
+@{
+    var message = TempData["ErrorMessage"] as string;
+}
+
+<div>
+    <p class="text-danger">@message</p>
+</div>
+
 <div class="shadow-sm rounded mt-3 p-4 bg-white">
     <form method="post" class="row align-items-end">
         <div class="form-group col-sm-5 ">
