--- a/EmployeeSkillManagement/Views/Skill/Index.cshtml
+++ b/EmployeeSkillManagement/Views/Skill/Index.cshtml
@@ -7,6 +7,13 @@
     </div>
 </div>
 
+@{
+    var message = TempData["ErrorMessage"] as string;
+}
+
+<div>
+    <p class="text-danger">@message</p>
+</div>
 
 <div class="shadow p-4 bg-white">
     @{
