Fixed ESL and Designation model and repo logic

--- a/EmployeeSkillManagement/Views/Employee/GenerateReport.cshtml
+++ b/EmployeeSkillManagement/Views/Employee/GenerateReport.cshtml
@@ -27,7 +27,7 @@
                     <tr>
                         <td>@employee.FirstName @employee.LastName</td>
                         <td>@employee.Email</td>
-                        <td>@employee.DesignationName</td>
+                        <td>@employee.Designation.DesignationName</td>
                         <td>@employee.DateOfJoining</td>
                         @if(Model.PrimarySkill!=""){
                             <td>@Model.PrimarySkill</td>
