--- a/EmployeeSkillManagement/Views/Employee/Create.cshtml
+++ b/EmployeeSkillManagement/Views/Employee/Create.cshtml
@@ -42,7 +42,7 @@
   </div>
   <div class="form-group col-sm-5 mb-4">
     <label asp-for="DateOfJoining"></label>
-    <input asp-for="DateOfJoining" value="2022/07/12" class="form-control" type="date" placeholder="Enter ">
+    <input asp-for="DateOfJoining" class="form-control" type="date" placeholder="Enter ">
     <span asp-validation-for="DateOfJoining"></span>
   </div>
 
