--- a/EmployeeSkillManagement/Views/Shared/_Layout.cshtml
+++ b/EmployeeSkillManagement/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
 </head>
 <body>
     <div class="super-contianer d-sm-flex">
+        @if(User.Identity!.IsAuthenticated){
         <header class="side-navbar-header col-sm-3 ">
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-sm-bottom  pt-4">
                 <div class="container-fluid flex-sm-column p-0">
@@ -50,18 +51,21 @@
                 </div>
             </nav>
         </header>
+        }
         <div class="container main-container">
             <main role="main" class="">
                 @RenderBody()
             </main>
         </div>
     </div>
-
+    
+    @if(User.Identity!.IsAuthenticated){
     <footer class="border-top bg-dark text-muted p-3 ">
         <div class="container d-flex justify-content-center align-items-center">
             &copy; 2023 - EmployeeSkillManagement - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    }
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
