--- a/EmployeeSkillManagement/Views/Employee/_EmployeeCard.cshtml
+++ b/EmployeeSkillManagement/Views/Employee/_EmployeeCard.cshtml
@@ -8,10 +8,12 @@
         <p class="text-muted">@employee.Designation!.DesignationName</p>
         <p class="mb-1">
             <span class="fw-normal ">Date of Joining:</span> 
+            <br class="d-none d-sm-block d-lg-none">
             <span class="fw-bold">@employee.DateOfJoining</span>
         </p>
         <p class="mb-1">
             <span class="fw-normal ">Email Address:</span> 
+            <br class="d-none d-sm-block d-lg-none">
             <span class="fw-bold">@employee.Email</span>
         </p>
     </div>        
