--- a/EmployeeSkillManagement/Views/Shared/_Layout.cshtml
+++ b/EmployeeSkillManagement/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
         <header class="side-navbar-header col-sm-3 ">
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-sm-bottom  pt-4">
                 <div class="container-fluid flex-sm-column p-0">
-                    <a class=" mt-sm-5 mb-sm-5 text-dark" asp-area="" asp-controller="Home" asp-action="Index">Employee Skill Management</a>
+                    <a class="text-center mt-sm-5 mb-sm-5 text-dark" asp-area="" asp-controller="Home" asp-action="Index">Employee Skill Management</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -58,9 +58,9 @@
             </main>
         </div>
     </div>
-    
+
     @if(User.Identity!.IsAuthenticated){
-    <footer class="border-top bg-dark text-muted p-3 ">
+    <footer class="bg-dark text-muted p-3 ">
         <div class="container d-flex justify-content-center align-items-center">
             &copy; 2023 - EmployeeSkillManagement - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
