--- a/EmployeeSkillManagement/Views/Account/Login.cshtml
+++ b/EmployeeSkillManagement/Views/Account/Login.cshtml
@@ -1,18 +1,24 @@
 @model EmployeeSkillManagement.Models.ViewModels.LoginViewModel
+<div class="login-card">
+    <h4>Admin Login</h4>
+    <form asp-action="Login" asp-controller="Account" method="post">
+        <input type="hidden" name="returnUrl" value="@Context.Request.Query["ReturnUrl"]" />
+        <div class="form-group">
+            <label asp-for="Username"></label>
+            <input asp-for="Username" class="form-control" />
+            <small><span asp-validation-for="Username" class="text-danger"></span></small>
+        </div>
+        <div class="form-group">
+            <label asp-for="Password"></label>
+            <input asp-for="Password" type="password" class="form-control" />
+            <small><span asp-validation-for="Password" class="text-danger"></span></small>
+        </div>
+        <button type="submit" class="btn btn-primary">Login</button>
+    </form>
+</div>
 
-<h2>Login</h2>
-<form asp-action="Login" asp-controller="Account" method="post">
-    <input type="hidden" name="returnUrl" value="@Context.Request.Query["ReturnUrl"]" />
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <div class="form-group">
-        <label asp-for="Username"></label>
-        <input asp-for="Username" class="form-control" />
-        <span asp-validation-for="Username" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Password"></label>
-        <input asp-for="Password" type="password" class="form-control" />
-        <span asp-validation-for="Password" class="text-danger"></span>
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-</form>
+@section Scripts{
+    @{
+        <partial name="_ValidationScriptsPartial"/>
+    }
+}
