--- a/EmployeeSkillManagement/Views/Employee/Index.cshtml
+++ b/EmployeeSkillManagement/Views/Employee/Index.cshtml
@@ -1,11 +1,4 @@
 @model EmployeeSkillManagement.Models.ViewModels.EmployeesListViewModel
-@{
-    var message = TempData["ErrorMessage"] as string;
-}
-
-<div>
-    <p class="text-danger">@message</p>
-</div>
 
 <div class="d-flex align-items-center justify-content-between pe-sm-2">
     <h4 class="p-2 col-6 text-center text-lg-start m-0">Manage Employee</h4>
@@ -38,7 +31,11 @@
             <button type="submit" class="btn btn-success bg-gradient w-100">Generate Report</button>
         </div>
     </form>
-
+    <div id="spinner-container" class="d-flex justify-content-center d-none">
+        <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
     <div id="employeeListDiv">    
         @await Html.PartialAsync("_EmployeeCard", Model.Employees)
     </div>
