--- a/EmployeeSkillManagement/Views/Shared/_Layout.cshtml
+++ b/EmployeeSkillManagement/Views/Shared/_Layout.cshtml
@@ -15,6 +15,8 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/2.4.2/css/buttons.dataTables.min.css" />
 
+    @* ToastR *@
+    <link rel="stylesheet" href="cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
     @* Google font *@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,6 +55,7 @@
         }
         <div class="container main-container">
             <main role="main" class="">
+                <partial name="_Notifications"></partial>
                 @RenderBody()
             </main>
         </div>
@@ -76,7 +79,7 @@
     <script type="text/javascript"src="https://cdn.datatables.net/buttons/2.4.2/js/dataTables.buttons.min.js"></script>
     <script type="text/javascript"src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script type="text/javascript"src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
-   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
     <script type="text/javascript"src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.html5.min.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
