--- a/EmployeeSkillManagement/Views/Shared/_Layout.cshtml
+++ b/EmployeeSkillManagement/Views/Shared/_Layout.cshtml
@@ -25,10 +25,10 @@
 <body>
     <div class="super-contianer d-sm-flex">
         @if(User.Identity!.IsAuthenticated){
-        <header class="side-navbar-header col-sm-3 ">
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-sm-bottom  pt-4">
+        <header class="side-navbar-header col-sm-3 bg-gradient">
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-sm-bottom  pt-4">
                 <div class="container-fluid flex-sm-column p-0">
-                    <a class="text-center mt-sm-5 mb-sm-5 text-dark" asp-area="" asp-controller="Home" asp-action="Index">Employee Skill Management</a>
+                    <a class="text-center mt-sm-5 mb-sm-5 text-light" style="text-decoration:none"asp-area="" asp-controller="Home" asp-action="Index">Employee Skill Management</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -36,16 +36,16 @@
                     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between border-top w-100 text-center">
                         <ul class="navbar-nav flex-grow-1 flex-sm-column">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                                <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Manage Employee</a>
+                                <a class="nav-link " asp-area="" asp-controller="Employee" asp-action="Index">Manage Employee</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Create">Create Employee</a>
+                                <a class="nav-link " asp-area="" asp-controller="Employee" asp-action="Create">Create Employee</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Skill" asp-action="Index">Manage Skills</a>
+                                <a class="nav-link " asp-area="" asp-controller="Skill" asp-action="Index">Manage Skills</a>
                             </li>
                         </ul>
                     </div>
