--- a/EmployeeSkillManagement/Views/Employee/Index.cshtml
+++ b/EmployeeSkillManagement/Views/Employee/Index.cshtml
@@ -1,7 +1,9 @@
 @model EmployeeSkillManagement.Models.ViewModels.EmployeesListViewModel
-
+@{
+    ViewData["Title"] = "Manage Employees";
+}
 <div class="d-flex align-items-center justify-content-between pe-sm-2">
-    <h4 class="p-2 col-6 text-center text-lg-start m-0">Manage Employee</h4>
+    <h5 class="p-2 col-6 text-center text-lg-start m-0 text-uppercase">Manage Employee</h5>
     <div class="col-6 col-lg-4 col-xl-3 text-center text-lg-end">
         <a asp-controller="Skill" asp-action="Create" class="btn btn-primary bg-gradient w-100">Create New Employee</a>
     </div>
