--- a/EmployeeSkillManagement/Views/Employee/_DeleteEmployeeModal.cshtml
+++ b/EmployeeSkillManagement/Views/Employee/_DeleteEmployeeModal.cshtml
@@ -3,11 +3,11 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="delete-modal-@Model.Id-label">Delete Employee</h5>
+        <h5 class="modal-title text-uppercase" id="delete-modal-@Model.Id-label">Delete Employee</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Are you confirm you want to delete this Employee data?
+        Are you sure you want to delete this employee data?
       </div>
       <div class="modal-footer">
         <form asp-controller="Employee" asp-action="Delete" method="post">
