--- a/EmployeeSkillManagement/Views/Employee/_EmployeeCard.cshtml
+++ b/EmployeeSkillManagement/Views/Employee/_EmployeeCard.cshtml
@@ -4,7 +4,7 @@
 
 <div class="d-sm-flex p-3 mb-2 border rounded bg-white ">
     <div class="col-sm-4 mb-4 mb-sm-0">
-        <h6 class="text-primary fw-bold m-0">@employee.FirstName @employee.LastName</h6>
+        <h6 class="text-primary fw-bold m-0 text-capitalize">@employee.FirstName @employee.LastName</h6>
         <p class="text-muted">@employee.Designation!.DesignationName</p>
         <p class="mb-1">
             <span class="fw-normal ">Date of Joining:</span> 
