--- a/EmployeeSkillManagement/Views/Skill/Create.cshtml
+++ b/EmployeeSkillManagement/Views/Skill/Create.cshtml
@@ -1,4 +1,8 @@
 @model Skill
+@{
+    ViewData["Title"] = "Create Skills";
+}
+<h5 class="p-2 col-4 text-uppercase">Create new skill</h5>
 
 <div class="shadow-sm rounded mt-3 p-4 bg-white">
     <form method="post" class="row align-items-end">
